fixed display component overflow

--- a/src/styles/_display.scss
+++ b/src/styles/_display.scss
@@ -23,3 +23,10 @@ h6 {
   font-size: 3rem;
   margin: 0;
 }
+
+.amount-container {
+  overflow: scroll;
+  max-width: 230px;
+}
+
+// 240px, make font size 2rem?
